--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="css/block/header.css">
     <link rel="stylesheet" href="css/block/newCard.css">
     <link rel="stylesheet" href="css/block/card.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
 
 </head>
 
 <body>
     <header class="header container">
-        <h1 class="header-title">Projeto - Front-end</h1>
+        <h1 class="header-title">Projeto - Cards</h1>
         <nav class="header-menu">
             <ul>
                 <li class="header-button">
@@ -35,7 +36,7 @@
 
 
     <section class="container">
-        <ol>
+        <ol class="wrap-card">
             <li class="card" data-color="first">
                 <nav class="wrap-card-options">
                     <ul>
@@ -163,5 +164,4 @@
     <script src="js/block/card.js"></script>
     <script src="js/block/newCard.js"></script>
 </body>
-
 </html>
